MEMBER: fixing overlay z-index stacking issues.

--- a/source/styles/ui/_overlay.scss
+++ b/source/styles/ui/_overlay.scss
@@ -1,8 +1,12 @@
 #{$projectSelector} {
+	&Overlay {
+		z-index: auto !important;
+		text-align: center;
+	}
 	.overlay {
 		@include fixedAll;
 		width: 100% !important;
-		z-index: 1000;
+		z-index: 10000;
 		background-color: rgba($BLACK, 0.85);
 		display: none !important;
 		opacity: 0;
@@ -18,7 +22,7 @@
 			top: -32px;
 			left: 50%;
 			margin-left: -32px;
-			z-index: 10;
+			z-index: 11;
 		}
 
 		&Wrapper {
